--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Image Gallery</title>
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <script type="module" src="./main.js"></script>
+    <ul class="gallery"></ul>
+    <script type="module" src="./js/01-gallery.js"></script>
   </body>
 </html>
